style: Fix button text cropping and increase tab font size

--- a/source/resources/styles/QPushButton.css
+++ b/source/resources/styles/QPushButton.css
@@ -2,7 +2,7 @@ QPushButton {
     color: #eeeeee;
     background-color: #333333;
     border: 1px solid #3d3d3d;
-    padding: 8px 14px;
+    padding: 10px 14px;
     border-radius: 4px;
 }
 
@@ -22,7 +22,7 @@ QPushButton[Popup=true] {
     color: #eeeeee;
     background-color: #333333;
     border: 1px solid #3d3d3d;
-    padding: 8px 14px;
+    padding: 10px 14px;
     border-radius: 4px;
 }
 
@@ -64,7 +64,7 @@ QPushButton[CloseButton=true]:hover {
 QPushButton[LaunchButton=true] {
     background-color: #598F4C;
     border: none;
-    padding: 12px;
+    padding: 13px;
     border-radius: 4px;
     color: white;
     font-weight: bold;
@@ -83,14 +83,14 @@ QPushButton[LaunchButton=true]:disabled {
 QPushButton[UpdateButton=true] {
     background-color: #3c669e;
     border: none;
-    padding: 12px;
+    padding: 13px;
     border-radius: 4px;
 }
 
 QPushButton[UpdateButton=true]:hover {
     background-color: #5485c5;
     border: none;
-    padding: 12px;
+    padding: 13px;
     border-radius: 4px;
 }
 
@@ -102,7 +102,7 @@ QPushButton[UpdateButton=true]:disabled {
 QPushButton[CreateButton=true] {
     background-color: #e87d0d;
     color: white;
-    padding: 12px;
+    padding: 13px;
     border: none;
     border-radius: 4px;
 }
@@ -115,7 +115,7 @@ QPushButton[CreateButton=true]:disabled {
 QPushButton[InstalledButton=true] {
     background-color: #3c669e;
     border: none;
-    padding: 12px;
+    padding: 13px;
     border-radius: 4px;
 }
 
@@ -127,13 +127,15 @@ QPushButton[CreateButton=true]:hover {
 QPushButton[CancelButton=true] {
     background-color: #cd4128;
     border: none;
-    padding: 12px;
+    padding: 13px;
     border-radius: 4px;
 }
 
 QPushButton[CancelButton=true]:hover {
     background-color: #e64a2e;
     border: none;
+    padding: 13px;
+    border-radius: 4px;
 }
 
 QPushButton[CancelButton=true]:disabled {
